@@ -30,6 +30,7 @@ interface:
 - removed parameter "constraints/and/initiallp" since it is not needed anymore;
 - set "constraints/and/sepafreq" default value to 1
 - added function SCIPgetTransObjscale() and SCIPgetTransObjoffset() in scip.c
+- expand the sort template functions in sorttpl.c with a "five" array; now it possible to used this template to sort up to five arrays
 
 features:
 - adjusted hard memory limit to (soft memory limit)*1.1 + 100mb in check.sh, checkcount.sh, check_cplex.sh, check_cluster.sh and check_cbc.sh
